--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html {
-    background: #1e5799;
+    /* background: #1e5799;
     background: -moz-linear-gradient(top,  #1e5799 0%, #7db9e8 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e5799), color-stop(100%,#7db9e8));
     background: -webkit-linear-gradient(top,  #1e5799 0%,#7db9e8 100%);
@@ -7,7 +7,8 @@ html {
     background: -ms-linear-gradient(top,  #1e5799 0%,#7db9e8 100%);
     background: linear-gradient(to bottom,  #1e5799 0%,#7db9e8 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 );
-    background-attachment: fixed;
+    background-attachment: fixed; */
+    background: #e3f6ff;
     padding: 0;
     margin: 0;
     height: 100%;
@@ -17,17 +18,17 @@ html {
 
 
 h1 {
-    font-size: 42px;
-    color:#b0e0e6; /* keep this color */
-    letter-spacing: 8px;
+    font-size: 40px;
+    color:#048fd0; /* keep this color */
+    letter-spacing: 4px;
     font-weight: 600;
     margin-bottom: 30px;
-    padding: 60px;
+    padding: 20px;
 }
 
 h2 {
-    color: #b0e0e6; /* #89CFF0 */
-    font-weight: 500;
+    color: #05a9f6; /* #89CFF0 */
+    font-weight: normal;
 }
 
 h3 {
@@ -57,18 +58,21 @@ p {
     margin: 0;
     padding: 0;
     z-index: 100;
+    background-color: white;
 }
 
 .navList li {
     float: right;
     font-size: 14px;
     font-family: Montserrat, sans-serif;
-    font-weight: 700;
+    font-weight: bolder;
     letter-spacing: 4px;
 }
 
 .navList a {
-    color: #fff;
+    /* color: #fff; */
+    /* color: #1e5799; */
+    color: #0481bc;
     padding: 14px 22px;
     text-decoration: none;
     display: block;
@@ -77,7 +81,7 @@ p {
 }
 
 .navList a:hover {
-    background-color: #B6E1F6;
+    background-color: #e3f6ff;
     color: #036796;
 }
 
@@ -103,6 +107,7 @@ p {
     flex: 1;
     overflow: auto;
     padding: 20px;
+    padding-top: 60px;
 }
 
 
