--- a/aboutme.css
+++ b/aboutme.css
@@ -36,8 +36,15 @@ p {
     margin-left: 80px; 
     margin-right: 80px;
 }
+
+footer {
+    position: static;
+    background-color: #2a90bf;
+    letter-spacing: 4px;
+    padding: 5px;
+}
  
-  .navList {
+.navList {
     background-color: #2a90bf;
     box-shadow: 0 2px 8px 0px rgba(0, 0, 0, 0.2);
     list-style-type: none;
@@ -89,7 +96,8 @@ p {
 .main {
     flex: 1;
     overflow: auto;
-    padding: 20px;
+    /* padding: 20px; */
+    padding-top: 20px;
 }
 
  .aboutme {
