--- a/resume.css
+++ b/resume.css
@@ -33,6 +33,13 @@ p {
    margin-right: 40px;
 }
 
+footer {
+    position: static;
+    background-color: #2a90bf;
+    letter-spacing: 4px;
+    padding: 5px;
+}
+
 .navList {
     background-color: #2a90bf;
     box-shadow: 0 2px 8px 0px rgba(0, 0, 0, 0.2);
@@ -85,7 +92,8 @@ p {
 .main {
     flex: 1;
     overflow: auto;
-    padding: 20px;
+    /* padding: 20px; */
+    padding-top: 20px;
 }
 
 .resume {
